# wave-machine

./: .gitignore  README.md  _config.yml  atom-feed.xml  build.sh  index.html  index.md  params.json  wave-machine.cabal
_includes/: footer.html  ga.html  header.html  prev-next.html
_layouts/: page.html  post.html
_posts/: 2014-07-31-intro.md  2014-08-01-sound-wave-basics.md  2014-08-02-first-sine-wave.md  2014-08-03-wave-file.md  2014-08-04-combining-waves.md  2014-08-05-amplitude-auto-adjustment.md  2014-08-30-sequencing.md  2014-09-01-homophony.md  2014-09-04-harmonics.md
src/: Main.hs
src/WaveMachine/: Builders.hs  Sampling.hs
src/WaveMachine/Audio/: Pitch.hs  Sequencing.hs  Tones.hs  Voices.hs  Volume.hs  Waves.hs
stylesheets/: pygment_trac.css  stylesheet.css
