name:              wave-machine
version:           0.1
cabal-version:     >= 1.10
build-type:        Simple
author:            Jacob Page
category:          Sound

executable wave-machine
  default-language:  Haskell2010
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring >=0.10.4 && <0.11
  ghc-options:     -Wall

